--- a/articles/hdinsight/interactive-query/TOC.yml
+++ b/articles/hdinsight/interactive-query/TOC.yml
@@ -49,7 +49,7 @@
             - name: Använd Beeline
               href: ../hadoop/apache-hadoop-use-hive-beeline.md
               maintainContext: true
-            - name: Använd cURL
+            - name: Använda REST-API
               href: ../hadoop/apache-hadoop-use-hive-curl.md
               maintainContext: true
             - name: Använda Azure PowerShell
@@ -227,6 +227,12 @@
             - name: Använda Ambari REST API
               href: ../hdinsight-hadoop-manage-ambari-rest-api.md
               maintainContext: true
+        - name: Skala ett HDInsight-kluster
+          href: ../hdinsight-scaling-best-practices.md
+          maintainContext: true
+        - name: Använda extern metadatalagring
+          href: ../hdinsight-use-external-metadata-stores.md
+          maintainContext: true
         - name: Hantera loggar för ett HDInsight-kluster
           href: ../hdinsight-log-management.md
           maintainContext: true
@@ -300,7 +306,7 @@
   items:
     - name: Företagssäkerhet
       items:
-        - name: "Översikt\r\n"
+        - name: Översikt
           href: ../domain-joined/apache-domain-joined-introduction.md
           maintainContext: true
         - name: Planera för företagssäkerhet
