--- a/articles/machine-learning/preview/toc.yml
+++ b/articles/machine-learning/preview/toc.yml
@@ -1,7 +1,6 @@
 - name: Dokumentation om Azure Machine Learning (förhandsversion)
   href: index.yml
-- name: |
-    Översikt
+- name: Översikt
   expanded: true
   items:
     - name: Vad är Azure Machine Learning?
@@ -161,6 +160,8 @@
           href: data-prep-appendix10-sample-custom-column-transforms-python.md
         - name: API för körning av dataförberedelse
           href: data-prep-python-execution-api.md
+        - name: Förberedelse av data för driftsättning
+          href: data-prep-operationalization.md
     - name: Experimentering
       items:
         - name: Konfiguration av experimenteringstjänst
