--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -131,6 +131,8 @@
       href: cli-samples.md
     - name: PowerShell
       href: powershell-samples.md
+    - name: Azure Resource Manager-mallar
+      href: 'https://azure.microsoft.com/resources/templates/?term=cosmos+db&pageNumber=1'
 - name: Begrepp
   items:
     - name: Databas utan server
@@ -342,6 +344,8 @@
           href: logging.md
         - name: Hantera nycklar och konsekvens
           href: manage-account.md
+        - name: Åtkomstkontroll
+          href: access-control.md
         - name: Azure Lagringsutforskaren
           href: storage-explorer.md
         - name: Säkerhet
