--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -1,7 +1,6 @@
 - name: Azure Storage-dokumentation
   href: /azure/storage/
-- name: |
-    Översikt
+- name: Översikt
   items:
     - name: Introduktion
       href: storage-blobs-introduction.md
@@ -386,6 +385,8 @@
           href: ../../vs-azure-tools-storage-explorer-relnotes.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: Felsöka Storage Explorer
           href: ../common/storage-explorer-troubleshooting.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+        - name: Storage Explorer-hjälpmedel
+          href: ../../vs-azure-tools-storage-explorer-accessibility.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
     - name: NuGet-paket
       items:
         - name: Azure Storage-klientbibliotek för .NET
