--- a/articles/azure-policy/toc.yml
+++ b/articles/azure-policy/toc.yml
@@ -21,14 +21,10 @@
   items:
     - name: Principmallar
       href: json-samples.md
-- name: Begrepp
+- name: Koncept
   items:
     - name: Azure Policy-definitionsstruktur
       href: policy-definition.md
-- name: Instruktionsguider
-  items:
-    - name: Skapa principer med REST API
-      href: policy-insights.md
 - name: Referens
   items:
     - name: Azure CLI
