--- a/articles/azure-stack/TOC.yml
+++ b/articles/azure-stack/TOC.yml
@@ -57,8 +57,12 @@
         - name: Azure Stack PKI distributionskrav
           href: azure-stack-pki-certs.md
           items:
-            - name: Hämta PKI-certifikat för distribution av Azure-stacken
+            - name: Hämta Azure Stack PKI-certifikat
               href: azure-stack-get-pki-certs.md
+            - name: Förbered Azure Stack PKI-certifikat
+              href: prepare-pki-certs.md
+            - name: Verifiera Azure Stack PKI-certifikat
+              href: validate-pki-certs.md
         - name: Identitetsintegrering
           href: azure-stack-integrate-identity.md
         - name: Registrera Azure Stack
@@ -168,6 +172,10 @@
           href: azure-stack-security-foundations.md
         - name: Identitet
           items:
+            - name: Översikt över identitet
+              href: azure-stack-identity-overview.md
+            - name: Identity-arkitektur
+              href: azure-stack-identity-architecture.md
             - name: Hantera RBAC
               href: azure-stack-manage-permissions.md
             - name: Lägga till användare för Azure AD
@@ -288,13 +296,15 @@
       href: /azure/azure-stack/user/
 - name: Resurser
   items:
-    - name: Azure-översikt
-      href: 'https://azure.microsoft.com/roadmap/'
-    - name: MSDN-forum
-      href: 'https://social.msdn.microsoft.com/Forums/azure/home?forum=AzureStack'
+    - name: Översikt över Azure Stack
+      href: 'https://azure.microsoft.com/roadmap/?tag=azure-stack'
+    - name: Azure-stacken MSDN-forum
+      href: 'https://social.msdn.microsoft.com/Forums/en-US/home?forum=AzureStack'
+    - name: Azure-stacken dokumentationskommentarer
+      href: 'https://feedback.azure.com/forums/344565-azure-stack?category_id=160275'
     - name: Prisinformation
       href: 'https://azure.microsoft.com/overview/azure-stack/how-to-buy/'
     - name: Stack Overflow
       href: 'http://stackoverflow.com/questions/tagged/azure-stack'
     - name: Utbildning och certifiering
-      href: azure-stack-train-and-cert.md
+      href: 'https://docs.microsoft.com/azure/azure-stack/azure-stack-train-and-cert'
