--- a/articles/app-service/containers/toc.yml
+++ b/articles/app-service/containers/toc.yml
@@ -21,10 +21,8 @@
       href: ../../azure-toolkit-for-intellij-hello-world-web-app-linux.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
     - name: Skapa Ruby-app
       href: quickstart-ruby.md
-    - name: Skapa Go-app
-      href: quickstart-go.md
-    - name: Distribuera anpassad Docker-avbildning
-      href: quickstart-custom-docker-image.md
+    - name: Skapa Docker-/Go-app
+      href: quickstart-docker-go.md
 - name: Självstudier
   items:
     - name: 1 – App med DB
