--- a/articles/site-recovery/toc.yml
+++ b/articles/site-recovery/toc.yml
@@ -197,7 +197,7 @@
           items:
             - name: Källmiljö för VMware till Azure
               href: site-recovery-set-up-vmware-to-azure.md
-            - name: Distribuera konfigurationsservern för VMware och fysiska servrar
+            - name: Distribuera konfigurationsservern för VMware-haveriberedskap
               href: how-to-deploy-configuration-server.md
             - name: Källmiljö för fysisk till Azure
               href: site-recovery-set-up-physical-to-azure.md
@@ -267,8 +267,10 @@
       items:
         - name: Hantera processervrar i Azure
           href: site-recovery-vmware-setup-azure-ps-resource-manager.md
-        - name: Hantera konfigurationsservern
+        - name: Hantera konfigurationsservern för VMware-haveriberedskap
           href: site-recovery-vmware-to-azure-manage-configuration-server.md
+        - name: Hantera konfigurationsservern för haveriberedskap för fysiska datorer
+          href: physical-manage-configuration-server.md
         - name: Hantera vCenter-servrar
           href: site-recovery-vmware-to-azure-manage-vCenter.md
         - name: Hantera flera innehavare med CSP
