--- a/articles/virtual-machines/windows/toc.yml
+++ b/articles/virtual-machines/windows/toc.yml
@@ -33,15 +33,17 @@
       href: tutorial-virtual-network.md
     - name: 9 – Säkerhetskopiera virtuella datorer
       href: tutorial-backup-vms.md
-    - name: 10 – Övervaka och uppdatera virtuella datorer
+    - name: 10 – Styra virtuella datorer
+      href: tutorial-govern-resources.md
+    - name: 11 – Övervaka och uppdatera virtuella datorer
       href: tutorial-monitoring.md
-    - name: 11 – Hantera säkerhet för virtuella datorer
+    - name: 12 – Hantera VM-säkerhet
       href: tutorial-azure-security.md
-    - name: 12 – Team Services CI/CD
+    - name: 13 – Team Services CI/CD
       href: tutorial-vsts-iis-cicd.md
-    - name: 13 – Installera en SQL\IIS\.NET-stack
+    - name: 14 – Installera en SQL\IIS\.NET-stack
       href: tutorial-iis-sql.md
-    - name: 14 – Säker webbserver med SSL
+    - name: 15 – Säker webbserver med SSL
       href: tutorial-secure-web-server.md
 - name: Exempel
   items:
