--- a/articles/iot-dps/toc.yml
+++ b/articles/iot-dps/toc.yml
@@ -7,6 +7,8 @@
 - name: Snabbstarter
   expanded: true
   items:
+    - name: Konfigurera automatisk etablering – Azure CLI
+      href: quick-setup-auto-provision-cli.md
     - name: Konfigurera automatisk etablering – portal
       href: quick-setup-auto-provision.md
     - name: Konfigurera automatisk etablering – mall
@@ -21,6 +23,8 @@
               href: quick-create-simulated-device-tpm-java.md
             - name: 'C#'
               href: quick-create-simulated-device-tpm-csharp.md
+            - name: Node.js
+              href: quick-create-simulated-device-tpm-node.md
             - name: Python
               href: quick-create-simulated-device-tpm-python.md
         - name: X.509
