--- a/articles/logic-apps/TOC.yml
+++ b/articles/logic-apps/TOC.yml
@@ -39,16 +39,22 @@
           href: logic-apps-serverless-get-started-vs.md
         - name: Migrera från BizTalk Services
           href: logic-apps-move-from-mabs.md
+        - name: Kontrollera arbetsflödeskörning
+          items:
+            - name: Villkorssatser
+              href: logic-apps-control-flow-conditional-statement.md
+            - name: Switch-satser
+              href: logic-apps-control-flow-switch-statement.md
+            - name: Grenar
+              href: logic-apps-control-flow-branches.md
+            - name: Loopar
+              href: logic-apps-control-flow-loops.md
+            - name: Omfattningar
+              href: logic-apps-control-flow-run-steps-group-scopes.md
         - name: Lägga till anpassad kod med Azure Functions
           href: logic-apps-azure-functions.md
         - name: Anropa Logic Apps med Azure Functions
           href: logic-apps-scenario-function-sb-trigger.md
-        - name: Lägga till villkor och köra arbetsflöden
-          href: logic-apps-use-logic-app-features.md
-        - name: Lägga till switch-satser
-          href: logic-apps-switch-case.md
-        - name: 'Loopar, omfattningar och datadebatching'
-          href: logic-apps-loops-and-scopes.md
         - name: Meddelanden om batchprocess
           href: logic-apps-batch-process-send-receive-messages.md
         - name: Skapa med logikappsdefinitioner
@@ -152,20 +158,34 @@
           href: ../connectors/connectors-create-api-servicebus.md
         - name: Azure SQL Database
           href: ../connectors/connectors-create-api-sqlazure.md
+        - name: Bing Search
+          href: ../connectors/connectors-create-api-bingsearch.md
+        - name: Box
+          href: ../connectors/connectors-create-api-box.md
         - name: 'Anpassa API:er och webbappar'
           href: logic-apps-create-api-app.md
         - name: DB2
           href: ../connectors/connectors-create-api-db2.md
+        - name: Dropbox
+          href: ../connectors/connectors-create-api-dropbox.md
         - name: Dynamics 365 CRM Online
           href: ../connectors/connectors-create-api-crmonline.md
         - name: EDIFACT
           href: logic-apps-enterprise-integration-edifact.md
+        - name: Excel
+          href: ../connectors/connectors-create-api-excel.md
+        - name: Facebook
+          href: ../connectors/connectors-create-api-facebook.md
         - name: Filsystem
           href: logic-apps-using-file-connector.md
         - name: Flat fil
           href: logic-apps-enterprise-integration-flatfile.md
         - name: FTP
           href: ../connectors/connectors-create-api-ftp.md
+        - name: GitHub
+          href: ../connectors/connectors-create-api-github.md
+        - name: Google Drive
+          href: ../connectors/connectors-create-api-googledrive.md
         - name: HTTP
           href: ../connectors/connectors-native-http.md
         - name: HTTP + Swagger
@@ -176,34 +196,62 @@
           href: ../connectors/connectors-create-api-informix.md
         - name: Integrationskonto
           href: logic-apps-enterprise-integration-metadata.md
+        - name: MailChimp
+          href: ../connectors/connectors-create-api-mailchimp.md
+        - name: Microsoft Translator
+          href: ../connectors/connectors-create-api-microsofttranslator.md
         - name: MQ
           href: ../connectors/connectors-create-api-mq.md
         - name: Office 365 Outlook
           href: ../connectors/connectors-create-api-office365-outlook.md
+        - name: Office 365-användare
+          href: ../connectors/connectors-create-api-office365-users.md
+        - name: Office 365 Video
+          href: ../connectors/connectors-create-api-office365-video.md
+        - name: OneDrive
+          href: ../connectors/connectors-create-api-onedrive.md
+        - name: OneDrive för företag
+          href: ../connectors/connectors-create-api-onedriveforbusiness.md
         - name: Oracle-databas
           href: ../connectors/connectors-create-api-oracledatabase.md
+        - name: Project Online
+          href: ../connectors/connectors-create-api-projectonline.md
         - name: Begäran/svar
           href: ../connectors/connectors-native-reqres.md
+        - name: RSS
+          href: ../connectors/connectors-create-api-rss.md
         - name: Salesforce
           href: ../connectors/connectors-create-api-salesforce.md
         - name: SAP
           href: logic-apps-using-sap-connector.md
         - name: Schema
           href: ../connectors/connectors-native-recurrence.md
+        - name: SendGrid
+          href: ../connectors/connectors-create-api-sendgrid.md
         - name: sharepoint online
           href: ../connectors/connectors-create-api-sharepointonline.md
         - name: SharePoint Server
           href: ../connectors/connectors-create-api-sharepointserver.md
-        - name: SQL Server
+        - name: Slack
+          href: ../connectors/connectors-create-api-slack.md
+        - name: SQL Azure och SQL Server
           href: ../connectors/connectors-create-api-sqlazure.md
         - name: Omvandla XML
           href: logic-apps-enterprise-integration-transform.md
+        - name: Trello
+          href: ../connectors/connectors-create-api-trello.md
         - name: Twitter
           href: ../connectors/connectors-create-api-twitter.md
+        - name: Twilio
+          href: ../connectors/connectors-create-api-twilio.md
+        - name: Wunderlist
+          href: ../connectors/connectors-create-api-wunderlist.md
         - name: X12
           href: logic-apps-enterprise-integration-x12.md
         - name: XML-verifiering
           href: logic-apps-enterprise-integration-xml-validation.md
+        - name: Yammer
+          href: ../connectors/connectors-create-api-yammer.md
     - name: Hantera
       items:
         - name: Hantera logikappar – Visual Studio
