--- a/articles/azure-databricks/TOC.yml
+++ b/articles/azure-databricks/TOC.yml
@@ -26,7 +26,7 @@
     - name: Azure-översikt
       href: 'https://azure.microsoft.com/roadmap/?category=analytics'
     - name: Prissättning
-      href: 'https://azure.microsoft.com/pricing/'
+      href: 'https://azure.microsoft.com/pricing/details/databricks/'
     - name: Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/azure-databricks'
     - name: Regional tillgänglighet
