--- a/articles/cost-management/index.yml
+++ b/articles/cost-management/index.yml
@@ -3,7 +3,7 @@ documentType: LandingData
 title: Azure Cost Management-dokumentation
 metadata:
   title: "Dokumentation om Cost Management – Självstudier, API-referens | Microsoft Docs"
-  description: "Azure Cost Management från Cloudyn är en kostnadshanteringslösning med flera moln som hjälper dig att bättre använda Azure och andra molnresurser. Lär dig mer om att granska användning och kostnader, aktivt hantera kostnader, göra prognoser för utgifter och optimera kostnader med våra snabbstarter och självstudier."
+  description: "Azure Cost Management är en kostnadshanteringslösning med flera moln som hjälper dig att bättre använda Azure och andra molnresurser. Lär dig mer om att granska användning och kostnader, aktivt hantera kostnader, göra prognoser för utgifter och optimera kostnader med våra snabbstarter och självstudier."
   services: cost-management
   author: czeumault
   manager: carolz
@@ -13,13 +13,13 @@ metadata:
   ms.topic: landing-page
   ms.date: 09/18/2017
   ms.author: carolz
-  ms.openlocfilehash: d277487ff94578643fd455e460e49299938590d7
-  ms.sourcegitcommit: 0930aabc3ede63240f60c2c61baa88ac6576c508
+  ms.openlocfilehash: c88a093c75122c2ff32060ff2780bd4bf4d83f34
+  ms.sourcegitcommit: 8c3267c34fc46c681ea476fee87f5fb0bf858f9e
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 11/07/2017
+  ms.lasthandoff: 03/09/2018
 abstract:
-  description: "Azure Cost Management från Cloudyn är en kostnadshanteringslösning med flera moln som hjälper dig att bättre utnyttja och hantera Azure och andra molnresurser. Lär dig mer om att granska användning och kostnader, aktivt hantera kostnader, göra prognoser för utgifter och optimera kostnader med våra snabbstarter och självstudier."
+  description: "Azure Cost Management som licensieras av Cloudyn, ett dotterbolag till Microsoft, är en kostnadshanteringslösning med flera moln som hjälper dig att bättre utnyttja och hantera Azure och andra molnresurser. Lär dig mer om att granska användning och kostnader, aktivt hantera kostnader, göra prognoser för utgifter och optimera kostnader med våra snabbstarter och självstudier."
 sections:
 - title: "Snabbstarter på 5 minuter"
   items:
